src/test/ui/try-block/try-block-in-while.stderr
error: expected expression, found reserved keyword `try`
  --> $DIR/try-block-in-while.rs:6:11
   |
LL |     while try { false } {}
   |           ^^^ expected expression

error: aborting due to previous error

